# llmcord

./: .gitignore  README.md  config-example.yaml  flake.nix  pyproject.toml
.github/workflows/: release.yml  test.yml
src/llmcord/: __init__.py  __main__.py
tests/: test_main.py
