[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "llmcord"
version = "0.1.0"
description = "Talk to LLMs with your friends on Discord"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
]
maintainers = [{ name = "hcbt" }]
dependencies = [
    "discord.py>=2.6.0",
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/hcbt/llmcord"
Repository = "https://github.com/hcbt/llmcord"
Issues = "https://github.com/hcbt/llmcord/issues"
Changelog = "https://github.com/hcbt/llmcord/releases"

[project.scripts]
llmcord = "llmcord.llmcord:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.hatch.build]
exclude = [
    "/.pre-commit-config.yaml",
    "/.devenv",
    "/.devenv/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmcord"]
